updated pic sizes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Uba | Portfolio</title>
+    <title>Ubadineke🦀 | Portfolio</title>
     <link rel="stylesheet" href="main.css" />
     <!-- Font Awesome for icons -->
     <link
@@ -43,7 +43,7 @@
               Solana Archmage 🧙. Interested in everything server-side, systems, infra and
               blockchain.
             </p>
-            <a href="path/to/your-cv.pdf" class="cv-button" target="_blank">
+            <a href="#" class="cv-button" target="_blank">
               <i class="fas fa-file-alt"></i> View My CV
             </a>
             <div class="social-links">
