--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
           <div class="projects-grid">
             <!-- Project 1 -->
             <div class="project-card">
-              <img src="/assets/staff-portal-pic.png" alt="FUTO Staff Portal" class="project-img" />
+              <img src="/assets/staff-portal-pic.webp" alt="FUTO Staff Portal" class="project-img" />
               <div class="project-info">
                 <h3 class="project-title">FUTO Staff Portal</h3>
                 <p class="project-description">
@@ -65,7 +65,7 @@
 
               <!-- Project 2 -->
             <div class="project-card">
-              <img src="/assets/payszn-pic.png" alt="Payszn" class="project-img" />
+              <img src="/assets/payszn-pic.webp" alt="Payszn" class="project-img" />
               <div class="project-info">
                 <h3 class="project-title">Payszn</h3>
                 <p class="project-description">
@@ -94,7 +94,7 @@
 
             <!-- Project 3 -->
             <div class="project-card">
-              <img src="/assets/certify-pic.png" alt="Certify" class="project-img" />
+              <img src="/assets/certify-pic.webp" alt="Certify" class="project-img" />
               <div class="project-info">
                 <h3 class="project-title">Certify</h3>
                 <p class="project-description">
@@ -123,7 +123,7 @@
             
             <!-- Project 4 -->
             <div class="project-card">
-              <img src="/assets/dhms-pic.png" alt="DHMS" class="project-img" />
+              <img src="/assets/dhms-pic.webp" alt="DHMS" class="project-img" />
               <div class="project-info">
                 <h3 class="project-title">DHMS</h3>
                 <p class="project-description">
@@ -154,7 +154,7 @@
             <!-- Project 5 -->
             <div class="project-card">
               <img
-                src="/assets/crowdfunding-dapp-pic.png"
+                src="/assets/crowdfunding-dapp-pic.webp"
                 alt="Crowdfunding Dapp"
                 class="project-img"
               />
@@ -185,7 +185,7 @@
             
             <!-- Project 6 -->
             <div class="project-card">
-              <img src="/assets/steam-pic.png" alt="Superteam Vietnam AI Bot" class="project-img" />
+              <img src="/assets/steam-pic.webp" alt="Superteam Vietnam AI Bot" class="project-img" />
               <div class="project-info">
                 <h3 class="project-title">Superteam Vietnam AI Bot </h3>
                 <p class="project-description">
