--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
               Solana Archmage 🧙. Interested in everything server-side, systems, infra and
               blockchain.
             </p>
-            <a href="#" class="cv-button" target="_blank">
+            <a
+              href="/assets/ubadineke-resume.pdf"
+              class="cv-button"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <i class="fas fa-file-alt"></i> View My CV
             </a>
             <div class="social-links">
