--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <!-- Backend Skills -->
               <div class="skill-item">
                 <div class="skill-icon">
-                  <i class="fas fa-file-rustacean"></i>
+                  <i class="fa-brands fa-rust"></i>
                 </div>
                 <span class="skill-name">Rust</span>
               </div>
@@ -104,13 +104,13 @@
               </div>
               <div class="skill-item">
                 <div class="skill-icon">
-                  <i class="fab fa-javascript"></i>
+                  <i class="fa-brands fa-js"></i>
                 </div>
                 <span class="skill-name">Javascript</span>
               </div>
               <div class="skill-item">
                 <div class="skill-icon">
-                  <i class="fab fa-typescript"></i>
+                  <i class="fa-brands fa-ts"></i>
                 </div>
                 <span class="skill-name">Typescript</span>
               </div>
@@ -125,12 +125,6 @@
                   <i class="fas fa-server"></i>
                 </div>
                 <span class="skill-name">PostgreSQL</span>
-              </div>
-              <div class="skill-item">
-                <div class="skill-icon">
-                  <i class="fas fa-code"></i>
-                </div>
-                <span class="skill-name">GraphQL</span>
               </div>
               <div class="skill-item">
                 <div class="skill-icon">
